# install html file.
FILE(GLOB HTML_FILES ./*.html)
install(FILES ${HTML_FILES} DESTINATION ${PROJECT_BINARY_DIR}/InstallRoot)
install(DIRECTORY ./css DESTINATION ${PROJECT_BINARY_DIR}/InstallRoot)
install(DIRECTORY ./js DESTINATION ${PROJECT_BINARY_DIR}/InstallRoot)
install(DIRECTORY ./ace DESTINATION ${PROJECT_BINARY_DIR}/InstallRoot)

FILE(GLOB ICON_FILES ./*.ico)
install(FILES ${ICON_FILES} DESTINATION ${PROJECT_BINARY_DIR}/InstallRoot)
